--- a/user-service.yml
+++ b/user-service.yml
@@ -15,7 +15,7 @@ gateway:
   ip: 192.168.0.7
 
 order_service:
-  url:  http://127.0.0.1:8000/order-sevice/%s/orders
+  url:  http://127.0.0.1:8000/order-service/%s/orders
 
 
 
